--- a/TagWithIssues/app/views/issues/tag.erb
+++ b/TagWithIssues/app/views/issues/tag.erb
@@ -16,18 +16,22 @@
 <div class="splitcontentleft">
 <p>
     <label><%= l(:label_major_version_short) %></label>
-    <%= hidden_field_tag 'tag_name_major_version', @major_version %><%= @major_version %>
-    (<%= l(:from_config)%>)
+    <% if @can_edit_major_version -%>
+      <%= text_field_tag 'tag_name_major_version', @tag_name_major_version, :size => 5 %>
+<% else -%>
+      <%= hidden_field_tag 'tag_name_major_version', @tag_name_major_version %><%= @tag_name_major_version %>
+      (<%= l(:from_config)%>)
+    <% end -%>
 </p>
 
 <p>
     <label><%= l(:label_minor_version_short) %></label>
-    <%= text_field_tag 'tag_name_minor_version', '', :size => 5 %>
+    <%= text_field_tag 'tag_name_minor_version', @tag_name_minor_version, :size => 5 %>
 </p>
 
 <p>
     <label><%= l(:label_internal_version_extra_short) %></label>
-    <%= text_field_tag 'tag_name_internal_version_extra', '', :size => 15 %>
+    <%= text_field_tag 'tag_name_internal_version_extra', @tag_name_internal_version_extra, :size => 15 %>
     (<%= l(:optional)%>)
 </p>
 </div>
@@ -35,7 +39,7 @@
 <div class="splitcontentright">
 <p>
     <label><%= l(:label_choose_custom_tag_name) %></label>
-    <%= text_field_tag 'tag_name_custom', '', :size => 25 %>
+    <%= text_field_tag 'tag_name_custom', @tag_name_custom, :size => 25 %>
     <br>
     (<%= l(:overwrites_choices_with_version_numbers)%>)
 </p>
@@ -43,7 +47,7 @@
 
 <p>
     <!-- TODO: update this dynamically -->
-    <%= l :the_tag_name_will_be %>: <%= @major_version %>.<%= l :label_minor_version_short%>-<%= l :label_internal_version_extra_short%>
+    <%= l :the_tag_name_will_be %>: <%= @tag_name_major_version %>.<%= l :label_minor_version_short%>-<%= l :label_internal_version_extra_short%>
 </p>
 </fieldset>
 
@@ -77,6 +81,7 @@
           <th>Tag</th>
           <th>Commit</th>
           <th>Commit message</th>
+          <th>Commit date</th>
         </tr>
       </thead>
       <tbody>
@@ -85,6 +90,7 @@
             <td><%= t[:name] %></td>
             <td><%= t[:id] %></td>
             <td><%= t[:commit_message] %></td>
+            <td><%= t[:committed_on] %></td>
           </tr>
         <% end -%>
       </tbody>
