--- a/TagWithIssues/app/views/settings/_tag_with_issues.erb
+++ b/TagWithIssues/app/views/settings/_tag_with_issues.erb
@@ -1,4 +1,4 @@
 <p>
   <%=content_tag(:label, l(:label_major_version)) %>
-  <%=text_field_tag 'settings[major_version]', @settings['otrs_major_version'] %><br/>
+  <%=text_field_tag 'settings[major_version]', @settings['major_version'] %><br/>
 </p>
