fixes #692: tag commit in git (also works with gitolite)

--- a/TagWithIssues/app/views/settings/_tag_with_issues.erb
+++ b/TagWithIssues/app/views/settings/_tag_with_issues.erb
@@ -1,4 +1,7 @@
 <p>
   <%=content_tag(:label, l(:label_major_version)) %>
   <%=text_field_tag 'settings[major_version]', @settings['major_version'] %><br/>
+
+  <%=content_tag(:label, l(:label_tag_command)) %>
+  <%=text_field_tag 'settings[git_tag_command]', @settings['git_tag_command'] %><br/>
 </p>
