fixes #808: open tag form in new window

--- a/TagWithIssues/app/views/hooks/_view_issues_context_menu_end.erb
+++ b/TagWithIssues/app/views/hooks/_view_issues_context_menu_end.erb
@@ -1,5 +1,13 @@
-<li class="tag">
+<!-- <li class="tag">
   <%= context_menu_link l(:button_tag),
                         {:controller => 'issues', :action => 'tag', :ids => @issues.collect(&:id)},
                         :method => :post, :class => 'context_item' %>
+</li>
+-->
+
+<li class="tag">
+  <% form_tag({:controller => 'issues', :action => 'tag', :ids => @issues.collect(&:id)},
+               :method => :post, :target => "_blank", :class => 'context_item') do %>
+      <%= submit_tag l(:button_tag) %>
+  <% end %>
 </li>
