fixes #812: refs #811: tag format "major-minor-extra"

--- a/TagWithIssues/app/views/issues/tag.erb
+++ b/TagWithIssues/app/views/issues/tag.erb
@@ -47,7 +47,7 @@
 
 <p>
     <!-- TODO: update this dynamically -->
-    <%= l :the_tag_name_will_be %>: <%= @tag_name_major_version %>.<%= l :label_minor_version_short%>-<%= l :label_internal_version_extra_short%>
+    <%= l :the_tag_name_will_be %>: <%= @tag_name_major_version %>-<%= l :label_minor_version_short%>-<%= l :label_internal_version_extra_short%>
 </p>
 </fieldset>
 
