--- a/TagWithIssues/app/views/settings/_tag_with_issues.erb
+++ b/TagWithIssues/app/views/settings/_tag_with_issues.erb
@@ -2,6 +2,9 @@
   <%=content_tag(:label, l(:label_major_version)) %>
   <%=text_field_tag 'settings[major_version]', @settings['major_version'] %><br/>
 
+  <%=content_tag(:label, l(:label_tag_validate_regexp)) %>
+  <%=text_field_tag 'settings[tag_validate_regexp]', @settings['tag_validate_regexp'] %><br/>
+
   <%=content_tag(:label, l(:label_tag_command)) %>
   <%=text_field_tag 'settings[git_tag_command]', @settings['git_tag_command'] %><br/>
 
